[gd_scene load_steps=13 format=3 uid="uid://d4gsarj15etcw"]

[ext_resource type="Script" path="res://scripts/cutscenes/transition_2_3.gd" id="1_xc4ri"]
[ext_resource type="PackedScene" uid="uid://bu5bgy0tdjos2" path="res://scenes/world/dioramas/empire_diorama.tscn" id="2_acfpc"]
[ext_resource type="PackedScene" uid="uid://3rvmrijmbdl0" path="res://scenes/world/custom_environment.tscn" id="2_bva8p"]
[ext_resource type="Script" uid="uid://banqelddfh8mm" path="res://scripts/cutscenes/transition_globe.gd" id="2_d64km"]
[ext_resource type="PackedScene" uid="uid://bo1qjl47rsq2h" path="res://scenes/player/icbm_character.tscn" id="3_bva8p"]

[sub_resource type="SphereMesh" id="SphereMesh_smda0"]
radius = 495.25
height = 1000.0
radial_segments = 120
rings = 64

[sub_resource type="Gradient" id="Gradient_4fqsv"]
colors = PackedColorArray(0.519531, 0.519531, 0.519531, 1, 0.789063, 0.789063, 0.789063, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_pcctt"]
noise_type = 3
frequency = 0.0034

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_bva8p"]
seamless = true
as_normal_map = true
color_ramp = SubResource("Gradient_4fqsv")
noise = SubResource("FastNoiseLite_pcctt")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_uq7ph"]
albedo_color = Color(0.377091, 0.890625, 0.191345, 1)
normal_enabled = true
normal_texture = SubResource("NoiseTexture2D_bva8p")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_htgb0"]
albedo_color = Color(0.493545, 0.493546, 0.493546, 1)

[sub_resource type="BoxMesh" id="BoxMesh_ensnl"]
material = SubResource("StandardMaterial3D_htgb0")
size = Vector3(19.725, 1, 1.875)

[node name="Transition_2_3" type="Node3D"]
script = ExtResource("1_xc4ri")

[node name="CustomEnvironment" parent="." instance=ExtResource("2_bva8p")]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.398749, -0.834489, 0.380299, 0, -0.414693, -0.909961, 0.91706, -0.362846, 0.165359, 0, 3.26051, 0)

[node name="TransitionGlobe" type="Node3D" parent="."]
script = ExtResource("2_d64km")
sky_color = Color(0.059476, 0.36885, 0.745168, 1)
planet_color = Color(0.355825, 0.43, 0.3311, 1)
globe_visual_radius = 500.0

[node name="VisualContainer" type="Node3D" parent="TransitionGlobe"]
transform = Transform3D(1.00465, 0, 0, 0, 0.433414, 0.90635, 0, -0.90635, 0.433414, 0, -1.34, 0)

[node name="GlobeVisual" type="MeshInstance3D" parent="TransitionGlobe/VisualContainer"]
cast_shadow = 0
mesh = SubResource("SphereMesh_smda0")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_uq7ph")

[node name="GroundCam" type="Camera3D" parent="."]
transform = Transform3D(-0.999077, 0.0131688, 0.0408882, 3.66114e-09, 0.951851, -0.306562, -0.0429565, -0.306279, -0.950972, 2.859, 506.941, 5.239)
fov = 65.2

[node name="EmpireDiorama" parent="." instance=ExtResource("2_acfpc")]

[node name="base_building5" parent="EmpireDiorama/Diorama" index="8"]
transform = Transform3D(0.0408291, 0, 0.999166, 0, 1, 0, -0.999166, 0, 0.0408291, 18.3739, 500.942, 39.1554)

[node name="base_building9" parent="EmpireDiorama/Diorama" index="12"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 36.46, 494.174, 30.299)

[node name="Road" parent="EmpireDiorama/Diorama" index="19"]
transform = Transform3D(1, 0, 0, 0, 0.998744, -0.0501049, 0, 0.0501049, 0.998744, -1.90735e-06, 499.099, 39.6103)

[node name="DioramaCameraBase" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.999402, -0.0345681, 0, 0.0345681, 0.999402, -0.15, 500.035, 21.768)
mesh = SubResource("BoxMesh_ensnl")
skeleton = NodePath("")

[node name="PlayerOrigin" type="Node3D" parent="."]
transform = Transform3D(-1, -8.74228e-08, 0, 4.57536e-09, -0.052336, 0.998629, -8.7303e-08, 0.998629, 0.052336, 2.58, 804.603, 21.825)

[node name="ICBMCharacter" parent="PlayerOrigin" instance=ExtResource("3_bva8p")]
transform = Transform3D(1, 0, -2.10942e-15, 0, 1, 0, -2.77556e-16, 0, 1, 0, -2.639, -289.806)

[node name="FollowCam" type="Camera3D" parent="PlayerOrigin/ICBMCharacter"]
transform = Transform3D(-0.572774, 0.087504, -0.81503, -0.819686, -0.0530207, 0.570354, 0.00669472, 0.994752, 0.102095, -1.72098, 5.78796, 0.301147)

[editable path="EmpireDiorama"]
